<resources>
    <string name="app_name">Zusammen</string>
    <string name="signed">Зарегистрироваться</string>
    <string name="already_have_an_account_login">Войти в аккаунт</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="reg">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="signIn">Войти</string>
    <string name="not_have_an_account">Зарегистрироваться</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>